[gd_scene load_steps=5 format=3 uid="uid://c43u7of71xdrw"]

[ext_resource type="Script" uid="uid://b45f3rrdrf5s2" path="res://addons/Multiplayer/Scripts/menu.gd" id="1_h5orh"]

[sub_resource type="LabelSettings" id="LabelSettings_dw537"]
font_size = 32

[sub_resource type="Theme" id="Theme_wfwnj"]
Button/font_sizes/font_size = 32
Button/styles/normal = null
LineEdit/font_sizes/font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_mpyan"]
font_size = 35

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h5orh")
metadata/_edit_lock_ = true

[node name="ip_Label" type="Label" parent="."]
layout_mode = 1
offset_left = 2.0
offset_top = 39.0
offset_right = 299.0
offset_bottom = 94.0
label_settings = SubResource("LabelSettings_dw537")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -79.0
offset_right = 277.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wfwnj")

[node name="name" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/name"]
layout_mode = 2
size_flags_vertical = 1
text = "Name : "
label_settings = SubResource("LabelSettings_mpyan")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/name"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter your name"

[node name="Create" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 100)
layout_mode = 2
text = "Create Server"

[node name="ipIn" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "localhost"
placeholder_text = "Enter server ip"

[node name="Connect" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 100)
layout_mode = 2
text = "Connect as Client"

[node name="ip_Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="VBoxContainer/Connect" to="." method="_on_connect_pressed"]
